repos/emily-python/contents/test/reader/fail/parenDedent.em
# De-indent attempts to cross parenthesis boundary
# Arg: --ast
# Expect failure

One two
	three four (
		five
	six)